@@ -2,7 +2,7 @@ name = DKAN Sitewide Data Dashboard
 description = DKAN module for Data Dashboard content type
 core = 7.x
 package = DKAN
-version = 7.x-1.12.9
+version = 7.x-1.12.10
 project = dkan_data_dashboard
 dependencies[] = ctools
 dependencies[] = features
