@@ -2,7 +2,7 @@ name = DKAN Data Story
 description = Story building features for NuCivic Data.
 core = 7.x
 package = DKAN
-version = 7.x-1.12.9
+version = 7.x-1.12.10
 project = dkan_data_story
 dependencies[] = dkan_sitewide
 dependencies[] = dkan_sitewide_menu
