@@ -2,5 +2,5 @@ name = DKAN Datastore Fast Import
 description = Enable fast import for resources
 core = 7.x
 package = DKAN
-version = 7.x-1.12.9
+version = 7.x-1.12.10
 dependencies[] = dkan_datastore
