@@ -2,7 +2,7 @@ name = DKAN Sitewide
 description = Sitewide elements for DKAN.
 core = 7.x
 package = DKAN
-version = 7.x-1.12.9
+version = 7.x-1.12.10
 project = dkan_sitewide
 dependencies[] = colorizer
 dependencies[] = conditional_styles
