@@ -2,7 +2,7 @@ name = DKAN Topics
 description = Categorize your data with topics to help users find what they are looking for.
 core = 7.x
 package = DKAN
-version = 7.x-1.12.9
+version = 7.x-1.12.10
 dependencies[] = color_field
 dependencies[] = conditional_fields
 dependencies[] = dkan_dataset_content_types
